LW delete example checkpoint

--- a/examples/taxis/dbt_project.yml
+++ b/examples/taxis/dbt_project.yml
@@ -24,15 +24,25 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
-
-# Configuring models
-# Full documentation: https://docs.getdbt.com/docs/configuring-models
-
-# In this example config, we tell dbt to build all models in the example/
-# directory as views. These settings can be overridden in the individual model
-# files using the `{{ config(...) }}` macro.
-models:
-  taxis:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+vars:
+  taxi_s3:
+    bucket: 'datasets-documentation.s3.eu-west-3.amazonaws.com/nyc-taxi'
+    fmt: 'TabSeparatedWithNames'
+    structure:
+      - trip_id             UInt32
+      - pickup_datetime     DateTime
+      - dropoff_datetime    DateTime
+      - pickup_longitude    Nullable(Float64)
+      - pickup_latitude     Nullable(Float64)
+      - dropoff_longitude   Nullable(Float64)
+      - dropoff_latitude    Nullable(Float64)
+      - passenger_count     UInt8
+      - trip_distance       Float32
+      - fare_amount         Float32
+      - extra               Float32
+      - tip_amount          Float32
+      - tolls_amount        Float32
+      - total_amount        Float32
+      - payment_type        LowCardinality(String)
+      - pickup_ntaname      LowCardinality(String)
+      - dropoff_ntaname     LowCardinality(String)
