Expand high volume lw delete example, fix source schema issue

--- a/examples/taxis/models/sources.yml
+++ b/examples/taxis/models/sources.yml
@@ -2,7 +2,7 @@ version: 2
 
 sources:
   - name: taxis_source
-    schema: taxis
+    database: taxis
     description: This references the main taxi table as copied from S3
     tables:
       - database: taxis
