add tests fro distributed_incremental

--- a/.github/workflows/test_matrix.yml
+++ b/.github/workflows/test_matrix.yml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Run HTTP tests
         env:
-          DBT_CH_TEST_CLUSTER: test_replica
+          DBT_CH_TEST_CLUSTER: test_shard
         run: |
           PYTHONPATH="${PYTHONPATH}:dbt"
           pytest tests
