--- a/.github/workflows/test_cloud.yml
+++ b/.github/workflows/test_cloud.yml
@@ -40,3 +40,35 @@ jobs:
         env:
           DBT_CH_TEST_PORT: 9440
         run: pytest tests
+  cloud_smt_tests:
+    name: ClickHouse Cloud SharedMergeTree Tests
+    runs-on: ubuntu-latest
+
+    env:
+      PYTHONPATH: dbt
+      DBT_CH_TEST_HOST: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_HOST_SMT }}
+      DBT_CH_TEST_PASSWORD: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD_SMT }}
+      DBT_CH_TEST_CLUSTER_MODE: true
+      DBT_CH_TEST_CLOUD: true
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Python 3.11
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install requirements
+        run: pip3 install -r dev_requirements.txt
+
+      - name: Run HTTP tests
+        env:
+          DBT_CH_TEST_PORT: 8443
+        run: pytest tests
+
+      - name: Run Native tests
+        env:
+          DBT_CH_TEST_PORT: 9440
+        run: pytest tests
