Fix docker user setup due to ClickHouse/ClickHouse/pull/75259

--- a/.github/workflows/test_matrix.yml
+++ b/.github/workflows/test_matrix.yml
@@ -19,6 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       TEST_SETTINGS_FILE: latest
+      CLICKHOUSE_SKIP_USER_SETUP: 1
 
     strategy:
       matrix:
