add  max-parallel: 1 to solve conflicts when running multiple tests with CH cloud

--- a/.github/workflows/test_cloud.yml
+++ b/.github/workflows/test_cloud.yml
@@ -21,6 +21,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      max-parallel: 1
       matrix:
         python-version: [ '3.9', '3.10', '3.11', '3.12' ]
 
