TestBasicRefreshableMV.test_create was flaky: with only 2 minutes between runs that means it could get into "running" state, breaking the test.
Introduce 8 of parallelism at pytest level

--- a/.github/workflows/test_cloud.yml
+++ b/.github/workflows/test_cloud.yml
@@ -47,9 +47,9 @@ jobs:
       - name: Run HTTP tests
         env:
           DBT_CH_TEST_PORT: 8443
-        run: pytest tests
+        run: pytest tests -n 8
 
       - name: Run Native tests
         env:
           DBT_CH_TEST_PORT: 9440
-        run: pytest tests
+        run: pytest tests -n 8
