--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
+log_cli = True
 filterwarnings =
     ignore:.*'soft_unicode' has been renamed to 'soft_str'*:DeprecationWarning
     ignore:.*: ResourceWarning
@@ -7,3 +8,4 @@ env_files =
 pythonpath = .
 testpaths =
     tests/integration  # name per convention
+addopts = --doctest-modules
