--- a/.github/workflows/test_cloud.yml
+++ b/.github/workflows/test_cloud.yml
@@ -2,30 +2,15 @@
 name: "test_cloud"
 
 on:  # yamllint disable-line rule:truthy
-  schedule:
-    - cron: '0 0 * * *'  # nightly run every day at 00:00 UTC
-  pull_request:
-    branches: main
   push:
-    branches-ignore:
-      - '*_test'
-      - '*_dev'
-    paths-ignore:
-      - '**.md'
-      - 'LICENSE'
+    branches:
+      - '*_cloud'
   workflow_dispatch:
 
 jobs:
   cloud_smt_tests:
     name: ClickHouse Cloud SharedMergeTree Tests
     runs-on: ubuntu-latest
-    timeout-minutes: 90
-
-    strategy:
-      max-parallel: 1
-      fail-fast: false
-      matrix:
-        python-version: ['3.9', '3.10', '3.11', '3.12']
 
     env:
       PYTHONPATH: dbt
@@ -38,10 +23,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup Python ${{ matrix.python-version }}
+      - name: Setup Python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.11'
 
       - name: Install requirements
         run: pip3 install -r dev_requirements.txt
@@ -49,9 +34,9 @@ jobs:
       - name: Run HTTP tests
         env:
           DBT_CH_TEST_PORT: 8443
-        run: pytest tests --timeout=120
+        run: pytest tests
 
       - name: Run Native tests
         env:
           DBT_CH_TEST_PORT: 9440
-        run: pytest tests --timeout=120
+        run: pytest tests
