--- a/.github/workflows/test_matrix.yml
+++ b/.github/workflows/test_matrix.yml
@@ -30,12 +30,11 @@ jobs:
           - '3.10'
           - '3.11'
           - '3.12'
-        clickhouse-version:
-          - '23.8'
-          - '24.3'
-          - '24.8'
+        clickhouse-version:  # Testing ClickHouse versions with active security support https://github.com/ClickHouse/ClickHouse/blob/master/SECURITY.md
           - '25.3'
-          - '25.7'  # Skipping 25.8+ until https://github.com/ClickHouse/ClickHouse/issues/86434 is fixed.
+          - '25.6'
+          - '25.7'
+          - 'latest'
 
     steps:
       - name: Checkout
