--- a/.github/workflows/test_cloud.yml
+++ b/.github/workflows/test_cloud.yml
@@ -1,42 +1,36 @@
 ---
 name: "test_cloud"
 
-on:  # yamllint disable-line rule:truthy
+on: # yamllint disable-line rule:truthy
   push:
     branches:
       - '*_cloud'
   workflow_dispatch:
+
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
   cloud_smt_tests:
     name: ClickHouse Cloud SharedMergeTree Tests
     runs-on: ubuntu-latest
 
-    env:
-      PYTHONPATH: dbt
-      DBT_CH_TEST_HOST: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_HOST_SMT }}
-      DBT_CH_TEST_PASSWORD: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD_SMT }}
-      DBT_CH_TEST_CLUSTER_MODE: true
-      DBT_CH_TEST_CLOUD: true
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup Python 3.11
-        uses: actions/setup-python@v4
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v5
         with:
-          python-version: '3.11'
+          role-to-assume: ${{ secrets.INTEGRATIONS_STRESSHOUSE_GHA_IAM_ROLE }}
+          role-session-name: dbt-send-sqs-message
+          aws-region: eu-west-1
 
-      - name: Install requirements
-        run: pip3 install -r dev_requirements.txt
-
-      - name: Run HTTP tests
-        env:
-          DBT_CH_TEST_PORT: 8443
-        run: pytest tests
-
-      - name: Run Native tests
-        env:
-          DBT_CH_TEST_PORT: 9440
-        run: pytest tests
+      - name: Send SQS message
+        run: |
+          aws sqs send-message \
+            --region eu-west-1 \
+            --queue-url "${{ secrets.INTEGRATIONS_STRESSHOUSE_GHA_SQS_QUEUE_URL }}" \
+            --message-group-id "cloud-tests" \
+            --message-body "Hello from CLI"
