--- a/.github/workflows/test_cloud.yml
+++ b/.github/workflows/test_cloud.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           aws sqs send-message \
             --region eu-west-1 \
+            --no-cli-pager \
             --queue-url "${{ secrets.INTEGRATIONS_STRESSHOUSE_GHA_SQS_QUEUE_URL }}" \
             --message-group-id "cloud-tests" \
-            --message-body "Hello from CLI"
+            --message-body "Hello from DBT CI"
