Only execute one set of tests on PRs instead of two: one for the PR and another for the push.

--- a/.github/workflows/test_cloud.yml
+++ b/.github/workflows/test_cloud.yml
@@ -2,9 +2,8 @@
 name: "test_cloud"
 
 on:  # yamllint disable-line rule:truthy
-  push:
-    branches:
-      - '*_cloud'
+  pull_request:
+    branches: main
   workflow_dispatch:
 
 jobs:
