--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,11 +3,8 @@ name: "lint"
 
 on:  # yamllint disable-line rule:truthy
   pull_request:
-  push:
-    branches-ignore:
-      - '*_test'
-      - '*_dev'
-      - '*_cloud'
+    branches: main
+  workflow_dispatch:
 
 jobs:
   lint:
