Block again cloud tests from getting executed

--- a/.github/workflows/test_cloud.yml
+++ b/.github/workflows/test_cloud.yml
@@ -3,7 +3,8 @@ name: "test_cloud"
 
 on:  # yamllint disable-line rule:truthy
   pull_request:
-    branches: main
+    branches:
+      - '*_cloud'
   workflow_dispatch:
 
 jobs:
