--- a/.github/workflows/test_cloud_results.yml
+++ b/.github/workflows/test_cloud_results.yml
@@ -5,6 +5,7 @@ name: "test_cloud_results"
 on:
   workflow_dispatch:
   repository_dispatch:
+    types: [test_cloud_results]
 
 permissions:
   id-token: write
