--- a/.github/workflows/test_cloud_results.yml
+++ b/.github/workflows/test_cloud_results.yml
@@ -5,7 +5,7 @@ name: "test_cloud_results"
 on:
   workflow_dispatch:
   repository_dispatch:
-    types: [test_cloud_results]
+    types: [ test_cloud_results ]
 
 permissions:
   id-token: write
@@ -19,4 +19,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Placeholder
-        run: echo "This is a placeholder job to trigger on repository_dispatch events."
+        run: |
+          echo "This is a placeholder job to trigger on repository_dispatch events."
+
+      - name: Print event details
+        run: |
+          echo "Event Name: ${{ github.event_name }}"
+          echo "Event: ${{ github.event }}"
