Install local package as part of testing.

--- a/.github/workflows/test_cloud.yml
+++ b/.github/workflows/test_cloud.yml
@@ -29,7 +29,7 @@ jobs:
           python-version: '3.11'
 
       - name: Install requirements
-        run: pip3 install -r dev_requirements.txt
+        run: pip3 install . -r dev_requirements.txt
 
       - name: Run HTTP tests
         env:
