--- a/.github/workflows/test_matrix.yml
+++ b/.github/workflows/test_matrix.yml
@@ -65,7 +65,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install requirements
-        run: pip3 install -r dev_requirements.txt
+        run: pip3 install . -r dev_requirements.txt
 
       - name: Run HTTP tests
         env:
