Convert `setup.py` to `pyproject.toml`
Move to declarative packaging to provide better tooling
integration and build isolation (by enabling `python-build`).

This will run the build in isolation with the environment and being
explicit about the dependencies that are used to build the sdists and
bdists, making sure that the build is reproducible and isolated.

The check for the version compatibility has been moved to a unit test,
to move any scripting out of the project metadata.

--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -23,11 +23,11 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Upgrade Setuptools
-        run: pip install --upgrade setuptools wheel
+      - name: Install build dependencies
+        run: pip install --upgrade pip build twine
 
       - name: Build Distribution
-        run: python setup.py sdist bdist_wheel --universal
+        run: python -m build
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
