--- a/.github/workflows/steps_local_testing.yml
+++ b/.github/workflows/steps_local_testing.yml
@@ -1,32 +1,23 @@
 ---
-name: "test_matrix"
+name: "test_job"
 
 on:  # yamllint disable-line rule:truthy
-  pull_request:
-    branches: main
-  workflow_dispatch:
+  workflow_call:
+    inputs:
+      python-version:
+        required: true
+        type: string
+      clickhouse-version:
+        required: true
+        type: string
 
 jobs:
-  tests:
-    name: Python ${{ matrix.python-version }} | Clickhouse ${{ matrix.clickhouse-version}} | Ubuntu
+  test:
+    name: Python ${{ inputs.python-version }} | Clickhouse ${{ inputs.clickhouse-version }} | Ubuntu
     runs-on: ubuntu-latest
     timeout-minutes: 45
     env:
       TEST_SETTINGS_FILE: latest
-
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version:
-          - '3.9'
-          - '3.10'
-          - '3.11'
-          - '3.12'
-        clickhouse-version:  # Testing ClickHouse versions with active security support https://github.com/ClickHouse/ClickHouse/blob/master/SECURITY.md
-          - '25.3'
-          - '25.6'
-          - '25.7'
-          - 'latest'
 
     steps:
       - name: Checkout
@@ -34,10 +25,10 @@ jobs:
 
       - name: Set environment variables
         run: |
-          echo "DBT_CH_TEST_CH_VERSION=${{ matrix.clickhouse-version }}" >> $GITHUB_ENV
+          echo "DBT_CH_TEST_CH_VERSION=${{ inputs.clickhouse-version }}" >> $GITHUB_ENV
 
           # Set DBT_CH_TEST_SETTINGS based on major version
-          MAJOR_VERSION=$(echo "${{ matrix.clickhouse-version }}" | cut -d. -f1)
+          MAJOR_VERSION=$(echo "${{ inputs.clickhouse-version }}" | cut -d. -f1)
           if [ "$MAJOR_VERSION" -eq 23 ]; then
             echo "DBT_CH_TEST_SETTINGS=23" >> $GITHUB_ENV
           elif [ "$MAJOR_VERSION" -eq 24 ]; then
@@ -59,10 +50,10 @@ jobs:
           PROJECT_ROOT: ${{ github.workspace }}/tests/integration
         run: REPLICA_NUM=1 docker compose -f ${{ github.workspace }}/tests/integration/docker-compose.yml up -d
 
-      - name: Setup Python ${{ matrix.python-version }}
+      - name: Setup Python ${{ inputs.python-version }}
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ inputs.python-version }}
 
       - name: Install requirements
         run: pip3 install . -r dev_requirements.txt
