Remove twine dep, remove extra license added

--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -24,7 +24,7 @@ jobs:
           python-version: "3.11"
 
       - name: Install build dependencies
-        run: pip install --upgrade pip build twine
+        run: pip install --upgrade pip build
 
       - name: Build Distribution
         run: python -m build
